removed white space inbetween navbar and body, fixed register form overlapping footer

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,11 +7,14 @@ class {
 body {
     background-color:#cad5d8; 
     height: 100%;
-    padding-top: 65px;
+    padding-top: 56px;
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif; 
     color: #000
 }
 
+.container-pad-top{
+    padding-top: 65px;
+}
 
 .navbar {
     background-color: #fff;
@@ -200,13 +203,20 @@ caption p {
 
 .account-container {
     background-image: url('../images/lions-account.jpg'); 
-    height: 100vh;
-    background-position: center;
+    background-attachment: fixed;
+    min-height: 100%;
+    background-position: center 5%;
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+}
+
+/* pushes footer down to bottom of the page on larger screens. 
+Footer height on larger screens is 516px, navbar is 55px */
+.push-footer-down {
+  min-height: calc(100vh - (516px + 55px));
 }
 
 /* item cards */
